corrected controller errors

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -6,8 +6,11 @@
 </head>
 <body>
 <h1>Home Page</h1>
+<br>
 <a href="/now-playing">Now Playing</a>
+&nbsp;
 <a href="/medium-popular-long-name">Medium Popular Long Name</a>
-<a href="/overview-mashup">Overviews Mashup</a>
+&nbsp;
+<a href="/overview-mashup">Overview Mashup</a>
 </body>
 </html>
